# majia-Popskill

./: .gitignore  .gitmodules  .ota-deny-list.txt  CLAUDE.md  LICENSE  PLAN.md  README.en.md  README.md  SECURITY.md  STYLE.md  VERSION
.github/workflows/: ci.yml
docs/: appcast.xml  architecture-reference-skillctl.md  asset-control-plane.md  editors-pick-seeds.md  ipc.md  launch-kol-outreach.md  release-notes-v0.1.md  release-runbook.md  security.md  transcript-parsing.md  v0.1-qa-checklist.md  v0.1-release-readiness.md  why-popskill.md
docs/design/: v2.7-adaptive-layout.md
docs/dev/: cc-switch-reference.md  hot-skills.json
docs/history/: CONTRIBUTING_FOR_AI.md  DESIGN.md  PLAN-v1.md  PLAN-v2.md  STYLE.md  architecture-reference-skillctl.md  asset-control-plane.md  release-runbook-v0.1.md  security-v1.md  transcript-parsing.md  why-popskill-v1.md
docs/release/: v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.0.3.md  v1.0.4.md  v1.0.5.md  v1.1.0.md  v2.0.0.md  v2.1.0.md  v2.1.1.md  v2.1.2.md  v2.11.0.md  v2.12.0.md  v2.13.0.md  v2.13.1.md  (+20 more)
scripts/: append-appcast.py  check-l10n-coverage.py  ci-local.sh  dev-build.sh  gen-catalog-hot.py  gen-l10n.sh  generate-app-icon.swift  generate-appcast.sh  notarize.sh  package-dev-app.sh  package-dmg.sh  release-doctor.sh  release-manifest.sh  release.sh  run-app.sh  smoke-app.sh  smoke-bundle.sh  smoke-cli-mutating.sh  smoke-cli.sh  smoke-release.sh  smoke-screenshots.sh  sparkle-generate-keys.sh  sparkle-sign-update.sh  sparkle-tool.sh  swiftpm.sh  test.sh
skill-cli/: Cargo.toml
skill-cli/src/: main.rs
swift-app/: Package.swift
(+125 files in other folders)
