[package]
name = "skill-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
cc_switch_lib = { package = "cc-switch", path = "../cc-switch/src-tauri" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
